# firenotes

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md  index.html  package.json  svelte.config.js  vite.config.ts
firenotes-cli/: Cargo.toml
firenotes-cli/src/: main.rs  server.rs
firenotes-core/: Cargo.toml
firenotes-core/src/: document.rs  export.rs  lib.rs  parser.rs  storage.rs  templates.rs
firenotes-ui/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
firenotes-ui/src/: App.svelte  CommandPalette.svelte  EmojiPicker.svelte  SearchPanel.svelte  app.css  stores.ts
firenotes-ui/src/components/: Editor.svelte  Header.svelte  Sidebar.svelte
firenotes-ui/src/lib/: markdown.ts
firenotes-ui/src/stores/: documents.ts  mode.ts
scripts/: kill-dev.sh  run-ui-core.sh  run-ui-standalone.sh
src/: App.svelte  main.ts
src/components/: CommandPalette.svelte  EmojiPicker.svelte  LiveEditor.svelte  SearchPanel.svelte
src/stores/: stores.ts
