[package]
name = "firenotes-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "firenotes"
path = "src/main.rs"

[dependencies]
firenotes-core = { path = "../firenotes-core" }
anyhow = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
tokio = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }